fixed alignment issue

--- a/styles/docs.css
+++ b/styles/docs.css
@@ -326,7 +326,7 @@ table > tr {
 img.hig-icons-example {
     box-shadow:inset 0 0 0 1px rgba(0,0,0,0.05);
     display: inline-block;
-    margin: 2em;
+    margin: 2em auto;
     width: 100%;
     height: auto;
     max-height: 512px;
